# harmonyhotelgroup_server

./: .gitignore  README.md  pyproject.toml
apps/api/: admin.py
apps/api/fixtures/: hotels.json  locations.json  services.json  socialplatform.json
apps/api/forms/: location_form.py
apps/api/models/: __init__.py  hotel.py  hotel_model.py  metrics_model.py  offer_model.py  prospect_model.py  social_network.py  tours_model.py
apps/api/serializers/: all_serial.py  hotel_serial.py  metrics_serial.py  offer_serial.py  prospect_serial.py  social_network_serial.py  tours_serial.py
apps/api/stores/: unique_file_store.py
apps/api/urls/: __init__.py  all_url.py  hotel_url.py
apps/api/views/: __init__.py  all_view.py  hotel_view.py
apps/commands/management/commands/: backup.py  resetdb.py
apps/commands/utils/: plural.py  searchs.py
apps/core/: admin.py  apps.py
apps/core/fixtures/: cities.json  countries.json  provinces.json
apps/core/models/: __init__.py  city_model.py  country_model.py  province_model.py
server/: settings.py  urls.py
tools/: convert-utf8.py
