[project]
name = "harmonyhotel-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.4.0",
    "django>=5.1.6",
    "django-api-generator>=1.0.18",
    "django-celery-results>=2.5.1",
    "django-debug-toolbar>=5.0.1",
    "djangorestframework>=3.15.2",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "hiredis>=3.1.0",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "setuptools>=75.8.0",
    "str2bool>=1.1",
    "whitenoise>=6.9.0",
]

