[project]
name = "harmonyhotel-service"
authors = [
    { name = "Walter Cun Bustamante", email = "waltercunbustamante@gmail.com" },
]
maintainers = [
    { name = "Walter Cun Bustamante", email = "waltercunbustamante@gmail.com" },
]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "django>=5.1.6",
    "django-seed>=0.3.1",
    "djangorestframework>=3.15.2",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "setuptools>=75.8.0",
    "str2bool>=1.1",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.0.1",
]

